Set max width to inputs to fix firefox overflow.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -39,6 +39,10 @@ textarea {
     margin-top: 0 !important; /* bootstrap override */   
 }
 
+.quantity-input {
+    max-width: 100%; /* Prevent overflow on firefox */
+}
+
 .track-select,
 .track-input {
     width: 80%;
